--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </aside>
 
   <aside id="productDetail" class="inactive">
-    <div class="close">
+    <div class="product-detail-close">
       <img src="./icons/icon_close.png" alt="close">
     </div>
     <img
